--- a/new/newIndex.html
+++ b/new/newIndex.html
@@ -19,7 +19,7 @@
 					<span><h1>HTML Tester</span>
 				</div>
 				<div>
-					<p></p>
+					<p>Reklam-div</p>
 				</div>
 			</header>
 			<article>
@@ -49,6 +49,9 @@
 						<button class="btn" onclick="location.reload()" type="button">Yenile</button>
 					</div>
 					<!-- alt taraf -->
+				</div>
+				<div>
+					<p>Reklam-div</p>
 				</div>
 			</article>
 			<footer>
