--- a/new/newIndex.html
+++ b/new/newIndex.html
@@ -64,7 +64,7 @@
 				<a href="https://github.com/thehavays" class="fa fa-github" target="_blank"></a>
 				<a href="http://steamcommunity.com/profiles/76561198074172280/" class="fa fa-steam-square" target="_blank"></a><br><br>
 				
-				Powered by <a href="http://www.havaylar.com/">Havaylar</a><sup>©</sup>
+				Powered by <a href="http://www.havaylar.com/" target="_blank">Havaylar</a><sup>©</sup>
 			</footer>
 		</div>
 	</div>
