--- a/new/newIndex.html
+++ b/new/newIndex.html
@@ -16,7 +16,7 @@
 		<div class="content">
 			<header class="col-12">
 				<div>
-					<span><h1>HTML Tester</span>
+					<span><h1>HTML Tester</h1></span>
 				</div>
 				<div>
 					<p>Reklam-div</p>
